# promptlog

./: .gitignore  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  README.md  paper.bib  paper.md  promptlog.py  pyproject.toml
.github/workflows/: ci.yml  repo-factory.yml
docs/: api.md
scripts/: factory.py
src/promptlog/: __init__.py  __main__.py  gui.py  intercept.py  logger.py  providers.py  verify.py
tests/: test_gui.py  test_intercept.py  test_promptlog.py
