[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "promptlog"
version = "0.1.0"
description = "Provider-agnostic LLM interaction logger with SHA-256 tamper detection"
readme = "README.md"
license = {file = "LICENSE"}
authors = [{name = "Vaibhav Deshmukh", email = "vdeshmukh203@gmail.com"}]
requires-python = ">=3.8"
dependencies = []
keywords = ["llm", "logging", "tamper-detection", "jsonl", "openai", "anthropic", "gemini", "reproducibility"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: System :: Logging",
]

[project.scripts]
promptlog-gui = "promptlog.gui:main"

[project.optional-dependencies]
dev = ["pytest>=7", "pyflakes"]

[tool.setuptools.packages.find]
where = ["src"]
